--- a/styles.css
+++ b/styles.css
@@ -47,6 +47,15 @@ section {
   width: 100%;
 }
 
+.main.active .portfolio .popupPortfolio {
+  left: 50%;
+}
+
+.main.active .portfolio .popupPortfolio.active {
+  left: 50%;
+  width: 600px;
+}
+
 .main .topBar {
   position: fixed;
   top: 0;
@@ -124,7 +133,7 @@ section {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  padding: 0 20px;
+  padding: 80px 20px;
 }
 
 .main .banner .content {
@@ -348,10 +357,21 @@ section {
           flex-direction: column;
   min-height: 350px;
   min-width: 210px;
+  -webkit-box-shadow: 0 8px 32px 0 rgba(0, 0, 0, 0.3);
+          box-shadow: 0 8px 32px 0 rgba(0, 0, 0, 0.3);
+  -webkit-transition: 0.5s;
+  transition: 0.5s;
+}
+
+.main .services .content .serviceBox:hover {
+  -webkit-transform: scale(1.1);
+          transform: scale(1.1);
+  -webkit-backdrop-filter: blur(10px);
+          backdrop-filter: blur(10px);
 }
 
 .main .services .content .serviceBox img {
-  max-width: 50px;
+  max-width: 150px;
 }
 
 .main .services .content .serviceBox h2 {
@@ -384,10 +404,10 @@ section {
   opacity: 0;
   background: rgba(0, 0, 0, 0.3);
   border: 1px solid rgba(255, 255, 255, 0.15);
-  -webkit-box-shadow: inset 0px 0px 20px 5px rgba(255, 255, 255, 0.05);
-          box-shadow: inset 0px 0px 20px 5px rgba(255, 255, 255, 0.05);
+  -webkit-box-shadow: inset 0px 0px 20px 5px rgba(255, 255, 255, 0.05), 0 8px 32px 0 rgba(0, 0, 0, 0.3);
+          box-shadow: inset 0px 0px 20px 5px rgba(255, 255, 255, 0.05), 0 8px 32px 0 rgba(0, 0, 0, 0.3);
   backdrop-filter: blur(10px);
-  -webkit-backdrop-filter: blur(30px);
+  -webkit-backdrop-filter: blur(10px);
   width: 450px;
   padding: 20px 30px;
   border-radius: 10px;
@@ -408,11 +428,6 @@ section {
   transition: opacity 300ms ease-in-out 0ms, width 0.5s, left 0.5s, -webkit-transform 300ms ease-in-out 0ms;
   transition: opacity 300ms ease-in-out 0ms, transform 300ms ease-in-out 0ms, width 0.5s, left 0.5s;
   transition: opacity 300ms ease-in-out 0ms, transform 300ms ease-in-out 0ms, width 0.5s, left 0.5s, -webkit-transform 300ms ease-in-out 0ms;
-}
-
-.main .portfolio .popupPortfolio.visible.active {
-  left: 50%;
-  width: 600px;
 }
 
 .main .portfolio .popupPortfolio .popUpCloseBtn {
@@ -472,6 +487,8 @@ section {
   max-height: 400px;
   max-width: 400px;
   overflow-y: hidden;
+  -webkit-box-shadow: 0 8px 32px 0 rgba(0, 0, 0, 0.3);
+          box-shadow: 0 8px 32px 0 rgba(0, 0, 0, 0.3);
   cursor: pointer;
 }
 
@@ -493,13 +510,15 @@ section {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  color: var(--black);
+  color: whitesmoke;
   top: 100%;
   min-height: 100%;
   min-width: 100%;
-  background-color: #31312e;
-  -webkit-transition: top 0.5s , background-color 1s;
-  transition: top 0.5s , background-color 1s;
+  background-color: rgba(49, 49, 46, 0.3);
+  -webkit-transition: top 0.5s;
+  transition: top 0.5s;
+  -webkit-backdrop-filter: blur(10px);
+          backdrop-filter: blur(10px);
 }
 
 .main .portfolio .content .slideBox:hover .textBox {
@@ -550,12 +569,7 @@ section {
 }
 
 .darkMode .container .main .services .content .serviceBox:hover {
-  background: #2196f2;
-}
-
-.darkMode .container .main .services .content .serviceBox img {
-  -webkit-filter: invert(1);
-          filter: invert(1);
+  background: #2197f2;
 }
 
 #navigation {
@@ -599,6 +613,8 @@ section {
       -ms-flex-align: center;
           align-items: center;
   cursor: pointer;
+  font-size: 1.2em;
+  font-weight: 600;
 }
 
 #navigation .listes .num {
@@ -617,8 +633,6 @@ section {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
-  font-size: 1.2em;
-  font-weight: 600;
   text-transform: uppercase;
   min-width: 39px;
   height: 39px;
@@ -630,8 +644,6 @@ section {
 
 #navigation .listes .num span {
   position: relative;
-  font-size: 1.2em;
-  font-weight: 600;
   color: var(--black);
   -webkit-transition: 0.5s;
   transition: 0.5s;
@@ -645,9 +657,7 @@ section {
   color: var(--black2);
   text-decoration: none;
   display: inline-block;
-  font-size: 1.6em;
   letter-spacing: 1px;
-  font-weight: 600;
   text-transform: uppercase;
 }
 
