--- a/styles.scss
+++ b/styles.scss
@@ -45,6 +45,16 @@ section{
    &.active {
     left: 0;
     width: 100%;
+    .portfolio{
+        .popupPortfolio{
+            left: 50%;
+            &.active{
+                left: 50%;
+                width: 600px;
+               
+            }
+        }
+    }
     }
     //Barre de haut fixe
     .topBar{
@@ -108,7 +118,7 @@ section{
         display: flex;
         justify-content: center;
         align-items: center;
-        padding: 0 20px;
+        padding: 80px 20px;
         .content{
     
             width: 100%;
@@ -280,8 +290,15 @@ section{
                 flex-direction: column;
                 min-height: 350px;
                 min-width: 210px;
+                box-shadow: 0 8px 32px 0 rgba(0, 0, 0, 0.3);
+                transition: 0.5s;
+                &:hover{
+                    transform: scale(1.1);
+                   
+                    backdrop-filter: blur(10px);
+                }
                 img {
-                    max-width: 50px;
+                    max-width: 150px;
                     
                 }
                 h2{
@@ -318,9 +335,10 @@ section{
             opacity: 0;
             background: rgba(0,0, 0, 0.3);
             border: 1px solid rgba(255,255,255, 0.15);
-            box-shadow: inset 0px 0px 20px 5px rgba(255,255,255, 0.05);
+            box-shadow: inset 0px 0px 20px 5px rgba(255,255,255, 0.05),
+            0 8px 32px 0 rgba(0, 0, 0, 0.3);
             backdrop-filter: blur(10px);
-            -webkit-backdrop-filter: blur(30px);
+            -webkit-backdrop-filter: blur(10px);
             width: 450px;
             padding: 20px 30px;
             border-radius: 10px;
@@ -339,11 +357,7 @@ section{
                         opacity 300ms ease-in-out 0ms,
                         transform 300ms ease-in-out 0ms,
                         width 0.5s, left 0.5s;
-                &.active{
-                    left: 50%;
-                    width: 600px;
-                   
-                }
+                
             }
             .popUpCloseBtn{
                 position: absolute;
@@ -387,6 +401,7 @@ section{
                 max-height: 400px;
                 max-width: 400px;
                 overflow-y: hidden;
+                box-shadow: 0 8px 32px 0 rgba(0, 0, 0, 0.3);
                 cursor: pointer;
                 .imgBox{
                     img{
@@ -400,12 +415,13 @@ section{
                     display: flex;
                     justify-content: center;
                     align-items: center;
-                    color: var(--black);
+                    color: whitesmoke;
                     top: 100%;
                     min-height: 100%;
                     min-width: 100%;
-                    background-color: rgb(49, 49, 46);
-                    transition: top 0.5s , background-color 1s;
+                    background-color: rgba(49, 49, 46,0.3);
+                    transition: top 0.5s;
+                    backdrop-filter: blur(10px);
                 }
                 &:hover{
                     .textBox{
@@ -473,12 +489,13 @@ section{
                 .content{
                     .serviceBox{
                         transition: 0.5s;
+                        
                         &:hover{
-                            background:#2196f2;
+                            background:#2197f2;
                         }
-                        img{
-                            filter: invert(1);
-                        }
+                        // img{
+                        //     filter: invert(1);
+                        // }
                     }
                 }
             }
@@ -513,7 +530,8 @@ section{
         margin: 10px 50px;
         align-items: center;
         cursor: pointer;
-        
+        font-size: 1.2em;
+        font-weight: 600;
        
         .num{
             position: relative;
@@ -522,8 +540,7 @@ section{
             justify-content: center;
             align-items: center;
             flex-direction: column;
-            font-size: 1.2em;
-            font-weight: 600;
+            
            
             text-transform: uppercase;
             min-width: 39px;
@@ -534,8 +551,8 @@ section{
             transform: scale(1);
             span{
                 position: relative;
-                font-size: 1.2em;
-                font-weight: 600;
+                // font-size: 1.2em;
+                // font-weight: 600;
                 color: var(--black);
                 transition: 0.5s;
             }
@@ -548,9 +565,9 @@ section{
             color: var(--black2);
             text-decoration: none;
             display: inline-block;
-            font-size: 1.6em;
+            
             letter-spacing: 1px;
-            font-weight: 600;
+            
             text-transform: uppercase;
             }        
         }
