--- a/styles.css
+++ b/styles.css
@@ -300,7 +300,7 @@ section {
 }
 
 .main .aPropos .content .imgBox img {
-  max-width: 100%;
+  max-width: 50%;
   border-radius: 20px;
 }
 
@@ -446,7 +446,7 @@ section {
 }
 
 .main .portfolio .popupPortfolio h1 {
-  font-size: 35px;
+  font-size: 2em;
   text-align: center;
   margin: 10px 0px 20px;
   color: #fff;
@@ -454,7 +454,38 @@ section {
 
 .main .portfolio .popupPortfolio p {
   color: #fdfdfd;
-  font-size: 17px;
+  font-size: 1.1em;
+}
+
+.main .portfolio .popupPortfolio .btnInterne {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  padding: 20px 10px;
+  gap: 20px;
+}
+
+.main .portfolio .popupPortfolio .btnInterne button {
+  padding: 05px 10px;
+  background-color: rgba(0, 0, 0, 0.1);
+  color: #fdfdfd;
+  -webkit-backdrop-filter: blur(10px);
+          backdrop-filter: blur(10px);
+  border-radius: 10px;
+  text-transform: uppercase;
+  font-weight: 500;
+  font-size: 1em;
+  word-spacing: 1px;
+}
+
+.main .portfolio .popupPortfolio .btnInterne button i {
+  margin: 10px 5px;
 }
 
 .main .portfolio .content {
@@ -507,9 +538,14 @@ section {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  align-items: center;
   color: whitesmoke;
   top: 100%;
   min-height: 100%;
@@ -519,6 +555,10 @@ section {
   transition: top 0.5s;
   -webkit-backdrop-filter: blur(10px);
           backdrop-filter: blur(10px);
+}
+
+.main .portfolio .content .slideBox .textBox p {
+  text-align: center;
 }
 
 .main .portfolio .content .slideBox:hover .textBox {
@@ -765,11 +805,21 @@ section {
     -webkit-box-align: center;
         -ms-flex-align: center;
             align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
   }
   .main .aPropos .content .imgBox {
     margin-left: 0;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
   }
   .main .aPropos .content .textBox {
+    padding: 20px 0;
     width: 100%;
     min-width: 100%;
   }
@@ -797,6 +847,9 @@ section {
   .main .portfolio .content {
     -ms-grid-columns: (1fr)[1];
         grid-template-columns: repeat(1, 1fr);
+  }
+  .main .portfolio .content .slideBox {
+    margin: auto;
   }
   .main .portfolio .popupPortfolio {
     left: 50%;
