--- a/styles.scss
+++ b/styles.scss
@@ -53,6 +53,7 @@ section{
                 width: 600px;
                
             }
+            
         }
     }
     }
@@ -253,7 +254,7 @@ section{
                 margin-left: 40px;
                 
                 img{
-                    max-width: 100%;
+                    max-width: 50%;
                     border-radius: 20px;
                    
                 }
@@ -374,14 +375,36 @@ section{
                 cursor: pointer;
                 }
             h1{
-                font-size: 35px;
+                font-size: 2em;
                 text-align: center;
                 margin: 10px 0px 20px;
                 color: #fff;
             }
             p{
                 color: #fdfdfd;
-                font-size: 17px;
+                font-size: 1.1em;
+            }
+            .btnInterne{
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                padding: 20px 10px;
+                gap: 20px;
+                button {
+                    padding: 05px 10px;
+                    background-color:rgba(0,0,0, 0.1) ;
+                    color: #fdfdfd;
+                    backdrop-filter: blur(10px);
+                    border-radius: 10px;
+                    text-transform: uppercase;
+                    font-weight: 500;
+                    font-size: 1em;
+                    word-spacing: 1px;
+
+                    i{
+                        margin: 10px 5px;
+                    }                
+                }
             }
         }
         .content{
@@ -414,6 +437,8 @@ section{
                     position: absolute;
                     display: flex;
                     justify-content: center;
+                    flex-direction: column;
+                    align-items: center;
                     align-items: center;
                     color: whitesmoke;
                     top: 100%;
@@ -422,6 +447,10 @@ section{
                     background-color: rgba(49, 49, 46,0.3);
                     transition: top 0.5s;
                     backdrop-filter: blur(10px);
+                    p{
+                        text-align: center;
+                        
+                    }
                 }
                 &:hover{
                     .textBox{
@@ -678,10 +707,15 @@ section{
                 display: flex;
                 flex-direction: column-reverse;
                 align-items: center;
+                justify-content: center;
                 .imgBox{
                     margin-left: 0;
+                    display: flex;
+                    justify-content: center;
+                    
                 }
                 .textBox{
+                    padding: 20px 0;
                     width: 100%;
                     min-width: 100%;
                 }
@@ -717,6 +751,9 @@ section{
         .portfolio{
             .content{
                 grid-template-columns: repeat(1,1fr);
+                .slideBox{
+                    margin: auto;
+                }
             }
             .popupPortfolio{
                 left: 50%;
