--- a/styles.scss
+++ b/styles.scss
@@ -114,6 +114,18 @@ section{
             
         }
     }
+    .canvas1{
+        position: absolute;
+        top: 60px;
+        z-index: 0;
+        left: 0; 
+        width: 100%;
+        padding: 50px;
+        display: flex;
+        justify-content: space-between;
+        
+    }
+    
     //page 1 home
     .banner{
         display: flex;
@@ -269,6 +281,7 @@ section{
         min-height: 100vh;
         padding: 0 40px;
         padding-top: 80px;
+        z-index: 3;
         .title{
             text-align: center;
             width: 100%; 
@@ -283,6 +296,7 @@ section{
             margin: 40px 0;
             gap: 20px;
             .serviceBox{
+                
                 border: 1px solid rgba(20, 9, 9, 0.2);
                 padding: 50px 20px;
                 display: flex;
@@ -293,6 +307,7 @@ section{
                 min-width: 210px;
                 box-shadow: 0 8px 32px 0 rgba(0, 0, 0, 0.3);
                 transition: 0.5s;
+                background-color: var(--white2);
                 &:hover{
                     transform: scale(1.1);
                    
@@ -323,7 +338,7 @@ section{
    //page 4 portfolio
    .portfolio{
         color: var(--black);
-        
+        z-index: 2;
         
         padding: 0 40px;
         padding-top: 80px; 
