--- a/styles.css
+++ b/styles.css
@@ -37,9 +37,10 @@ section {
   left: 300px;
   min-height: 100vh;
   background-color: var(--white2);
-  overflow-x: hidden;
+  overflow: hidden;
   -webkit-transition: 0.5s;
   transition: 0.5s;
+  z-index: 0;
 }
 
 .main.active {
@@ -125,17 +126,14 @@ section {
 
 .main .canvas1 {
   position: absolute;
-  top: 60px;
+  top: 0px;
   z-index: 0;
-  left: 0;
   width: 100%;
-  padding: 50px;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
+  left: 0;
+}
+
+.main .canvas1.active {
+  left: 0px;
 }
 
 .main .banner {
@@ -408,7 +406,7 @@ section {
 
 .main .portfolio {
   color: var(--black);
-  z-index: 2;
+  z-index: 3000;
   padding: 0 40px;
   padding-top: 80px;
 }
@@ -563,8 +561,8 @@ section {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  align-items: center;
   color: whitesmoke;
+  text-align: center;
   top: 100%;
   min-height: 100%;
   min-width: 100%;
@@ -780,9 +778,10 @@ section {
 
 @media (max-width: 992px) {
   #navigation {
+    top: 60px;
     left: 0;
     width: 0%;
-    z-index: 10000;
+    z-index: 100;
   }
   #navigation.active {
     left: 0;
@@ -797,6 +796,7 @@ section {
   .main .topBar {
     left: 0;
     width: 100%;
+    z-index: 10000;
     -webkit-transition: 0.1s;
     transition: 0.1s;
   }
@@ -855,6 +855,9 @@ section {
   .main .portfolio .popupPortfolio.visible {
     left: 50%;
   }
+  .main .portfolio .popupPortfolio.visible button {
+    font-size: 0.8em;
+  }
 }
 
 @media (max-width: 767px) {
@@ -865,9 +868,6 @@ section {
   .main .portfolio .content {
     -ms-grid-columns: (1fr)[1];
         grid-template-columns: repeat(1, 1fr);
-  }
-  .main .portfolio .content .slideBox {
-    margin: auto;
   }
   .main .portfolio .popupPortfolio {
     left: 50%;
