--- a/styles.scss
+++ b/styles.scss
@@ -24,7 +24,7 @@
 }
 body{
     overflow-x: hidden;
-
+    
 }
 section{
     min-height: 100vh;
@@ -39,9 +39,10 @@ section{
     left: 300px;
     min-height: 100vh;
     background-color: var(--white2);
-    overflow-x: hidden;
+    overflow: hidden;
+
     transition: 0.5s;
-    
+    z-index: 0;
    &.active {
     left: 0;
     width: 100%;
@@ -114,18 +115,21 @@ section{
             
         }
     }
+    
     .canvas1{
         position: absolute;
-        top: 60px;
+        top: 0px;
         z-index: 0;
-        left: 0; 
         width: 100%;
-        padding: 50px;
-        display: flex;
-        justify-content: space-between;
+        left: 0;
+         &.active{
+             left: 0px;
+         }
+        
+        
+        
         
     }
-    
     //page 1 home
     .banner{
         display: flex;
@@ -152,6 +156,7 @@ section{
                     width: 100%;
                     height: 100%;
                     object-fit: cover;
+                    
                 
                 }
             }
@@ -338,7 +343,7 @@ section{
    //page 4 portfolio
    .portfolio{
         color: var(--black);
-        z-index: 2;
+        z-index: 3000;
         
         padding: 0 40px;
         padding-top: 80px; 
@@ -454,8 +459,8 @@ section{
                     justify-content: center;
                     flex-direction: column;
                     align-items: center;
-                    align-items: center;
                     color: whitesmoke;
+                    text-align: center;
                     top: 100%;
                     min-height: 100%;
                     min-width: 100%;
@@ -679,10 +684,10 @@ section{
 {
     
     #navigation{
+        top: 60px;
         left: 0;
         width: 0%;
-        
-        z-index: 10000;
+        z-index: 100;
         &.active{
             left: 0;
             width: 100%;
@@ -696,6 +701,7 @@ section{
         .topBar{
             left: 0;
             width: 100%;
+            z-index: 10000;
             transition: 0.1s;
             &.active{
                 left: 0;
@@ -750,6 +756,9 @@ section{
                 left: 50%;
                 &.visible{
                     left:50%;
+                    button{
+                        font-size: 0.8em;
+                    }
                 }
             }
         }
@@ -766,9 +775,7 @@ section{
         .portfolio{
             .content{
                 grid-template-columns: repeat(1,1fr);
-                .slideBox{
-                    margin: auto;
-                }
+                
             }
             .popupPortfolio{
                 left: 50%;
