--- a/ressources/styles/styles.scss
+++ b/ressources/styles/styles.scss
@@ -471,6 +471,33 @@ section{
                         text-align: center;
                         
                     }
+                    .btnInterne{
+                        position: relative;
+                        bottom: 0px;
+                        display: flex;
+                        justify-content: center;
+                        align-items: center;
+                        margin-top: 20px;
+                        padding: 20px 10px;
+                        gap: 20px;
+                        button {
+                            padding: 05px 10px;
+                            background-color:rgba(0,0,0, 0.1) ;
+                            color: #fdfdfd;
+                            backdrop-filter: blur(10px);
+                            border-radius: 10px;
+                            text-transform: uppercase;
+                            font-weight: 500;
+                            font-size: 0.8em;
+                            word-spacing: 1px;
+                            &:hover{
+                                background-color: rgba(33, 150, 242,0.2);
+                            }
+                            i{
+                                margin: 10px 5px;
+                            }                
+                        }
+                    }
                 }
                 &:hover{
                     .textBox{
