--- a/ressources/styles/styles.css
+++ b/ressources/styles/styles.css
@@ -575,6 +575,7 @@ section {
 
 .main .portfolio .content .slideBox .textBox p {
   text-align: center;
+  padding-top: 5px;
 }
 
 .main .portfolio .content .slideBox .textBox .btnInterne {
@@ -589,7 +590,6 @@ section {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  margin-top: 20px;
   padding: 20px 10px;
   gap: 20px;
 }
