--- a/ressources/styles/styles.scss
+++ b/ressources/styles/styles.scss
@@ -467,9 +467,10 @@ section{
                     background-color: rgba(49, 49, 46,0.3);
                     transition: top 0.5s;
                     backdrop-filter: blur(10px);
+                    
                     p{
                         text-align: center;
-                        
+                        padding-top: 5px;    
                     }
                     .btnInterne{
                         position: relative;
@@ -477,7 +478,6 @@ section{
                         display: flex;
                         justify-content: center;
                         align-items: center;
-                        margin-top: 20px;
                         padding: 20px 10px;
                         gap: 20px;
                         button {
