--- a/ressources/styles/styles.scss
+++ b/ressources/styles/styles.scss
@@ -439,7 +439,7 @@ section{
                 justify-content: center;
                 align-items: center;
                 flex-direction: column;
-                min-height: 200px;
+                min-height: 300px;
                 min-width: 200px;
                 max-height: 400px;
                 max-width: 400px;
@@ -464,9 +464,9 @@ section{
                     top: 100%;
                     min-height: 100%;
                     min-width: 100%;
-                    background-color: rgba(49, 49, 46,0.3);
+                    background-color: gray;
                     transition: top 0.5s;
-                    backdrop-filter: blur(10px);
+                    // backdrop-filter: blur(10px);
                     
                     p{
                         text-align: center;
@@ -482,7 +482,7 @@ section{
                         gap: 20px;
                         button {
                             padding: 05px 10px;
-                            background-color:rgba(0,0,0, 0.1) ;
+                            background-color:rgba(0,0,0, 0.5 ) ;
                             color: #fdfdfd;
                             backdrop-filter: blur(10px);
                             border-radius: 10px;
@@ -675,7 +675,8 @@ section{
     }
     .colorMode{
         position: absolute;
-        bottom: 10px;
+        // bottom: 10px;
+        top: 80%;
         left: 40px;
         height: 30px;
         width: 30px;
